Closed Bug 1356752 Opened 7 years ago Closed 7 years ago

TaskTracer build is broken

Categories

(Core :: Gecko Profiler, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox52 --- unaffected
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: mstange, Assigned: mstange)

References

Details

(Keywords: regression)

Attachments

(1 file)

      No description provided.
Comment on attachment 8858474 [details]
Bug 1356752 - Fix --enable-tasktracer build by adding the missing aWriter argument.

https://reviewboard.mozilla.org/r/130438/#review133134

Thank you for fixing. I was wondering if we should remove MOZ_TASK_TRACER, and just build TaskTracer whenver the profiler is built. That would avoid this problem in the future.
Attachment #8858474 - Flags: review?(n.nethercote) → review+
There's bug 1323076 for building TaskTracer by default.
Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/3ccf70e977bd
Fix --enable-tasktracer build by adding the missing aWriter argument. r=njn
https://hg.mozilla.org/mozilla-central/rev/3ccf70e977bd
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: