Bug 1356752 - Fix --enable-tasktracer build by adding the missing aWriter argument. r=njn

MozReview-Commit-ID: L87KE3BmYRB

--HG--
extra : rebase_source : 09e34cc04ea7f76a07419e0e75cc0b097c001b6b